--- a/free-nodes/page-7.htm
+++ b/free-nodes/page-7.htm
@@ -94,6 +94,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-09-17">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-9-17-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/572cca27916877c289a949f8bee620b0.webp" alt="9月17日→20.6M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-9-17-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">9月17日→20.6M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、新加坡、日本、加拿大、香港、美国、欧洲等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-09-16">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-9-16-clash-node-daily-updates.htm" class="xcblog-blog-url">
@@ -220,20 +234,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-09-07">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-9-7-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/7be10a8674f96dee3b81e43500185f46.webp" alt="9月7日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-9-7-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">9月7日→18.7M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了美国、韩国、香港、新加坡、加拿大、日本、欧洲等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-6.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li class="active"><span>7</span></li><li><a href="/free-nodes/page-8.htm">8</a></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-25.htm">25</a></li><li><a href="/free-nodes/page-26.htm">26</a></li> <li><a href="/free-nodes/page-8.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -244,16 +244,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-7-8-free-ssr-subscribe.htm" title="7月8日→20.7M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">7月8日→20.7M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-11-clash-node.htm" title="10月11日→19.4M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">10月11日→19.4M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-21-free-v2ray.htm" title="9月21日→18.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">9月21日→18.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-24-free-ssr-subscribe.htm" title="5月24日→20.8M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月24日→20.8M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-25-free-high-speed-nodes.htm" title="6月25日→21.4M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">6月25日→21.4M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-28-free-ssr-subscribe.htm" title="7月28日→18.3M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">7月28日→18.3M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-4-free-clash-subscribe.htm" title="4月4日→21.3M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接">4月4日→21.3M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-1-free-high-speed-nodes.htm" title="9月1日→22M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">9月1日→22M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-13-shadowrocket-node.htm" title="5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-8-free-ssr-node.htm" title="8月8日→19.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">8月8日→19.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-6-clash-node.htm" title="11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-4-node-share.htm" title="6月4日→20.5M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">6月4日→20.5M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-5-free-ssr-node.htm" title="9月5日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">9月5日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-14-free-high-speed-nodes.htm" title="5月14日→20.2M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">5月14日→20.2M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-11-free-clash-subscribe.htm" title="11月11日→18.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月11日→18.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-13-clash-node.htm" title="10月13日→20.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">10月13日→20.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-9-clash-windows.htm" title="9月9日→22.9M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">9月9日→22.9M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-20-free-clash-subscribe.htm" title="5月20日→22.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">5月20日→22.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-20-free-v2ray-subscribe.htm" title="10月20日→20M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐">10月20日→20M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-4-clash-node-daily-updates.htm" title="5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -265,7 +265,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
