--- a/index.html
+++ b/index.html
@@ -121,6 +121,20 @@
             	<h2 class="text-center" style="margin-block: 1rem;">最近更新文章</h2>
                 <!-- welcome -->
                 <div class="xcblog-blog-list">
+                                        <div class="welcome xcblog-blog-item" data-date="2024-11-16">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-11-16-clash-node-daily-updates.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/ff9c8967726b63baf53a54f2227f5ddb.webp" alt="11月16日→21.4M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-11-16-clash-node-daily-updates.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">11月16日→21.4M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、香港、加拿大、新加坡、欧洲、日本、美国等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                         <div class="welcome xcblog-blog-item" data-date="2024-11-15">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-11-15-node-share-links.htm" class="xcblog-blog-url">
@@ -387,20 +401,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                        <div class="welcome xcblog-blog-item" data-date="2024-10-27">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-10-27-free-clash-subscribe.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/d3c24bb20e9a1c8c2d93a6bf044ee5c4.webp" alt="10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-10-27-free-clash-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了日本、韩国、加拿大、美国、香港、欧洲、新加坡等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                                     </div>
                 <!-- //welcome -->
             </div>
@@ -411,16 +411,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-8-1-free-v2ray-subscribe.htm" title="8月1日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月1日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-7-clash-windows.htm" title="3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接">3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-2-28-free-ssr-node.htm" title="2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接">2月28日20.3M/S|V2ray/Clash/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-10-node-share-links.htm" title="7月10日→21.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">7月10日→21.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-30-free-shadowrocket-node.htm" title="7月30日→20.3M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">7月30日→20.3M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-6-clash-node.htm" title="11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">11月6日→20.1M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-13-free-ssr-subscribe.htm" title="3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-13-clash-v2ray-ss-ssr.htm" title="6月13日→20M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">6月13日→20M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-17-free-high-speed-nodes.htm" title="9月17日→20.6M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">9月17日→20.6M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-11-free-clash-subscribe.htm" title="11月11日→18.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月11日→18.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-9-free-clash-subscribe.htm" title="3月9日18.7M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接">3月9日18.7M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-7-free-v2ray.htm" title="8月7日→18.1M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">8月7日→18.1M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-6-clash-node.htm" title="10月6日→21.1M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">10月6日→21.1M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-15-node-share-links.htm" title="11月15日→21.1M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐">11月15日→21.1M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-7-free-v2ray.htm" title="6月7日→20.5M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">6月7日→20.5M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-22-free-high-speed-nodes.htm" title="5月22日→20.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">5月22日→20.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-25-free-node-subscribe.htm" title="10月25日→20.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">10月25日→20.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-5-clash-node-daily-updates.htm" title="8月5日→19.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">8月5日→19.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-5-free-node-subscribe-links.htm" title="4月5日→22.2M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接">4月5日→22.2M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-14-free-clash.htm" title="6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -432,7 +432,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
